--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -5,4 +5,8 @@ title: page layout
 
 {{ content }}
 
-{{ tags }}
+<p>An image is here.</p>
+
+<p>These are tags: </p>{{ tags }}
+
+<p>Pagination should go here:</p>
