--- a/_includes/pagelist.liquid
+++ b/_includes/pagelist.liquid
@@ -2,12 +2,14 @@
 layout: layout.liquid
 title: page list for each book
 ---
-
 {{content}}
 <p>Filter this list by book:</p>
 <ul>
     {% for page in collections.page %}
-    <li><a href="{{ page.url }}">{{ page.data.title }}</a></li>
+    {% if page.data.title == title %}
+    
+    <li><img src="{{ page.url }}/{{ page.data.image }}" style="max-height: 100px;" /><a href="{{ page.url }}">{{ page.data.title }} - {{ page.data.description }} </a></li>
+    {% endif %}
     {% endfor %}
-   
 </ul>
+
