--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,29 +1,39 @@
 ---
 title: latewerks
 ---
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
+    <!-- <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+ -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"> -->
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css" />
 </head>
 
 <body>
-    <ul>
-        {% for nav in collections.nav %}
-        <li><a href="{{ nav.url }}">{{ nav.data.title }}</a></li>
-        {% endfor %}
-    </ul>
-    {{ content }}
-    <hr />
+    <header>
+        <ul class="nav">
+            {% for nav in collections.nav %}
+            <li><a href="{{ nav.url }}">{{ nav.data.title }}</a></li>
+            {% endfor %}
+        </ul>
+    </header>
+    <main>
+        {{ content }}
+    </main>
+    
+    <!-- <hr />
     <p style="color: magenta;">This is just to check that all of our pages are showing up.</p>
     <ul>
         {% for post in collections.all %}
         <li><a href="{{ post.url }}">{{ post.url }}</a></li>
         {% endfor %}
-    </ul>
+    </ul> -->
 </body>
 
 </html>
