--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -2,11 +2,16 @@
 layout: layout.liquid
 title: page layout
 ---
+<p>&#8592; navigation back to book</p>
+<!-- <li><a href="previousPageHref">lonk</a></li> -->
+<!-- I keep referring to https://www.11ty.io/docs/pagination/ but so far have not had much luck -->
+<h2>{{ title }}</h2>
+<img src="{{ image }}" style="max-width: 500px;" />
+<p>{{ description }}</p>
 
-{{ content }}
+<p>These are tags: {{ tags }}</p>
 
-<p>An image is here.</p>
-
-<p>These are tags: </p>{{ tags }}
-
-<p>Pagination should go here:</p>
+<p style="color: magenta;">other things:</p>
+<ul style="color: magenta;">
+    <li>revise title</li>
+</ul>
