--- a/_includes/booklist.liquid
+++ b/_includes/booklist.liquid
@@ -5,8 +5,22 @@ title: book list for library page
 
 {{content}}
 
-<ul>
-    {% for book in collections.book %}
-    <li><a href="{{ book.url }}">{{ book.data.title }}</a></li>
-    {% endfor %}
-</ul>
+<section class="center">
+  <h2 class="fw1 ph0-l">books</h2>
+  {% for book in collections.book %}
+  <article class="bt bw2">
+    <a class="db pv4 ph0-l no-underline black" href="{{ book.url }}">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns dim">
+            <!-- replace this with a cover image -->
+          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h1 class="f3 fw1 mt0 lh-title">{{ book.data.title }}</h1>
+          <p class="f6 f5 fw4 mt2 black-60">{{ book.data.description }}</p>
+        </div>
+      </div>
+    </a>
+  </article>
+ {% endfor %}
+</section>
