--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -8,25 +8,22 @@ title: latewerks
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
-    <!-- <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
- -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"> -->
-    <!-- <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+    <link rel="stylesheet" href="./css/base.css">
 </head>
 
-<body>
+<body class="helvetica near-black bg-washed-blue pa3">
     <header>
-        <ul class="nav">
+        <nav class="">
             {% for nav in collections.nav %}
-            <li><a href="{{ nav.url }}">{{ nav.data.title }}</a></li>
+            <a class="link dim gray    f6 f5-ns dib mr3" href="{{ nav.url }}">{{ nav.data.title }}</a>
             {% endfor %}
-        </ul>
+        </nav>
     </header>
-    <main>
-        {{ content }}
+    <main class="lh-copy">
+        <h1>{{ title }}</h1>
+        <p>{{ content }}</p>
     </main>
-    
     <!-- <hr />
     <p style="color: magenta;">This is just to check that all of our pages are showing up.</p>
     <ul>
