--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -2,16 +2,33 @@
 layout: layout.liquid
 title: page layout
 ---
-<p>&#8592; navigation back to book</p>
 <!-- <li><a href="previousPageHref">lonk</a></li> -->
 <!-- I keep referring to https://www.11ty.io/docs/pagination/ but so far have not had much luck -->
-<h2>{{ title }}</h2>
-<img src="{{ image }}" style="max-width: 500px;" />
-<p>{{ description }}</p>
 
-<p>These are tags: {{ tags }}</p>
+<article class="">
+  <header class="fn fl-ns w-50-ns pr4-ns">
+    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+        {{ description }}
+    </h1>
+    <h2 class="f3 mid-gray lh-title">
+      {{ tags }}
+    </h2>
+    <time class="f6 ttu tracked gray">Sometime before 1967</time>
+    <p>&#8592; navigation back to book</p>
 
-<p style="color: magenta;">other things:</p>
-<ul style="color: magenta;">
-    <li>revise title</li>
-</ul>
+  </header>
+  <div class="fn fl-ns w-50-ns">
+    <p class="f5 lh-copy measure mt0-ns">
+      <img src="{{ image }}" />
+    </p>
+    <p class="f5 lh-copy measure">
+      All typography consists of letters. These appear either in the form of a
+      smoothly running sentence or as an assembly of lines, which may even have
+      contrasting shapes. Good typog- raphy begins, and this is no minor
+      matter, with the typeset- ting of a single line of text in a book or a
+      newspaper. Using exactly the same typeface, it is possible to create either
+      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
+      or too compressed, will spoil almost any typeface.
+    </p>
+  </div>
+</article>
