--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -4,31 +4,29 @@ title: page layout
 ---
 <!-- <li><a href="previousPageHref">lonk</a></li> -->
 <!-- I keep referring to https://www.11ty.io/docs/pagination/ but so far have not had much luck -->
-
 <article class="">
-  <header class="fn fl-ns w-50-ns pr4-ns">
-    <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-        {{ description }}
-    </h1>
-    <h2 class="f3 mid-gray lh-title">
-      {{ tags }}
-    </h2>
-    <time class="f6 ttu tracked gray">Sometime before 1967</time>
-    <p>&#8592; navigation back to book</p>
-
-  </header>
-  <div class="fn fl-ns w-50-ns">
-    <p class="f5 lh-copy measure mt0-ns">
-      <img src="{{ image }}" />
-    </p>
-    <p class="f5 lh-copy measure">
-      All typography consists of letters. These appear either in the form of a
-      smoothly running sentence or as an assembly of lines, which may even have
-      contrasting shapes. Good typog- raphy begins, and this is no minor
-      matter, with the typeset- ting of a single line of text in a book or a
-      newspaper. Using exactly the same typeface, it is possible to create either
-      a pleasant line, easily read, or an onerous one. Spacing, if it is too wide
-      or too compressed, will spoil almost any typeface.
-    </p>
-  </div>
+    <header class="bt bw2 fn fl-ns w-50-ns">
+        <h1 class="">
+            {{ description }}
+        </h1>
+        <h2 class="mid-gray">
+            {{ tags }}
+        </h2>
+        <time class="ttu tracked gray">{{ date }}</time>
+        {% for book in collections.book %}
+        {% if book.data.title == title %}
+        <a href="{{ book.url }}" class="no-underline black">
+            <p>&#8592; back to {{ book.data.title }}</p>
+        </a>
+        {% endif %}
+        {% endfor %}
+    </header>
+    <div class="fn fl-ns w-50-ns pl3-ns">
+        <p class="f5 lh-copy measure mt0-ns">
+            <img src="{{ image }}" />
+        </p>
+        <p class="f5 lh-copy measure">
+            {{ content }}
+        </p>
+    </div>
 </article>
