--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,7 +9,7 @@ title: latewerks
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
-    <link rel="stylesheet" href="./css/base.css">
+    <!-- <link rel="stylesheet" href="./css/base.css"> -->
 </head>
 
 <body class="helvetica near-black bg-washed-blue pa3">
@@ -26,7 +26,7 @@ title: latewerks
         <p>{{ content }}</p>
     </main>
     <footer class="bt bw2 pt3">
-        a footer | get content from metadata
+        <p class="gray">a footer | get content from metadata | made with 11ty & tachyons</p>
     </footer>
     <!-- <hr />
     <p style="color: magenta;">This is just to check that all of our pages are showing up.</p>
