--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -5,10 +5,10 @@ title: page layout
 <!-- <li><a href="previousPageHref">lonk</a></li> -->
 <!-- I keep referring to https://www.11ty.io/docs/pagination/ but so far have not had much luck -->
 
-<!-- you broke it -->
+<!-- fix responsive -->
 <section>
     <article class="cf">
-        <header class="fl w-50 pt0 mt0 pr4">
+        <header class="fl w-30 pt0 mt0 pr4">
             <h1 class="bt bw2 pt3">
                 {{ description }}
             </h1>
@@ -24,7 +24,7 @@ title: page layout
             {% endif %}
             {% endfor %}
         </header>
-        <div class="fl w-50">
+        <div class="fl w-70">
             <p class="pt2">
                 <img src="{{ image }}" />
             </p>
