--- a/_includes/pagelist.liquid
+++ b/_includes/pagelist.liquid
@@ -10,15 +10,16 @@ title: page list for each book
         {% for page in collections.page %}
         {% if page.data.title == title %}
         <article class="fl w-100 w-50-m  w-25-ns pr3">
-        <div class="aspect-ratio aspect-ratio--5x7 bt bw2">
+        <div class="bt bw2">
             <a class="dim" href="{{ page.url }}">
-                <img src="{{ page.url }}/{{ page.data.image }}" class="db bg-center cover aspect-ratio--object pt3" />
+                <img src="{{ page.url }}/{{ page.data.image }}" class="pv3  bg-center cover" />
             </a>
         </div>
-        <a href="{{ page.url }}" class="no-underline black" >
-            <h3 class="f5 f4-ns mb0 black-90 pt3">{{ page.data.title }}</h3>
-            <h3 class="f6 f5 fw4 mt1 black-60">{{ page.data.description }}</h3>
-        </a>
+        <div class="mt0 pt0">
+            <a href="{{ page.url }}" class="near-black dim">{{ page.data.description }}</a>
+            <p class="f6 mt0 gray" >{{ page.data.date }}</p>
+
+        </div>
         </article>
         {% endif %}
         {% endfor %}
