--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -4,6 +4,9 @@ title: latewerks
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- to manage images??? -->
+<!-- https://github.com/11ty/eleventy/issues/440 -->
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
