fixes images on library and book pages

--- a/_includes/pagelist.liquid
+++ b/_includes/pagelist.liquid
@@ -11,6 +11,7 @@ title: page list for each book
         <article class="fl w-100 w-50-m  w-25-ns pr3">
         <div class="bt bw2">
             <a class="dim" href="{{ page.url }}">
+                <!-- currently looking for image in sketchbook folder, which seems preferable -->
                 <img src="{{ page.data.image }}" class="pv3 bg-center cover" />
             </a>
         </div>
