improves image paths

--- a/_includes/booklist.liquid
+++ b/_includes/booklist.liquid
@@ -17,7 +17,7 @@ title: book list for library page
           <div class="fl w-100 w-50-ns pv3">
             
             <!-- replace this with a cover image -->
-            <img src="{{ book.data.image }}" class="db bg-center cover" />
+            <img src="_img/{{ book.data.image }}" class="db bg-center cover" />
 
           <!-- <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db pv3" alt="Photo of a dimly lit room with a computer interface terminal."> -->
           </div>
