--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -27,7 +27,7 @@ title: page layout
             {% endfor %}
         </header>
         <div class="fl w-70">
-            <img src="{{ image }}" />
+            <img src="../_img/{{ image }}" />
             <p>
                 {{ content }}
             </p>
