--- a/_includes/pagelist.liquid
+++ b/_includes/pagelist.liquid
@@ -12,7 +12,7 @@ title: page list for each book
         <div class="bt bw2">
             <a class="dim" href="{{ page.url }}">
                 <!-- currently looking for image in sketchbook folder, which seems preferable -->
-                <img src="{{ page.data.image }}" class="pv3 bg-center cover" />
+                <img src="../_img/{{ page.data.image }}" class="pv3 bg-center cover" />
             </a>
         </div>
         <div class="mt0 pt0">
