--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -30,7 +30,7 @@ title: page layout
             {% endfor %}
         </header>
         <div class="fl w-70">
-            <img src="../_img/{{ image }}" />
+            <img src="../_img/{{ image }}" alt="{{ description }}"/>
             <p>
                 {{ content }}
             </p>
