--- a/_includes/pagelist.liquid
+++ b/_includes/pagelist.liquid
@@ -11,7 +11,7 @@ title: page list for each book
         <article class="fl w-100 w-50-m  w-25-ns pr3">
         <div class="bt bw2">
             <a class="dim" href="{{ page.url }}">
-                <img src="../_img/{{ page.data.image }}" class="pv3 bg-center cover" />
+                <img src="../_img/{{ page.data.image }}" class="pv3 bg-center cover" alt="{{ page.data.description }}" />
             </a>
         </div>
         <div class="mt0 pt0">
