--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -14,21 +14,16 @@ title: page layout
                         {{ title }}
                     </h2>
                     <p>{{ description }}</p>
-
-                    <!-- doing this wrong -->
-                    <!-- <ul>
-                        {% for page in collections.page %}
-                        <li>{{ page.data.tags }}</li>
-                        {% endfor %}
-                    </ul> -->
-                    <!-- not showing up, possibly due to lack of pages -->
-                    <!-- {% for book in collections.book %}
-                    {% if book.data.title == title %}
-                    <a href="{{ book.url }}" class="dim near-black">
-                        <p>&#8592; back to {{ book.data.title }}</p>
-                    </a>
+                    {% for book in collections.book %}
+                    {% if book.data.key == key %}
+                    <span>
+                        &larr;
+                        <a class="dim near-black" href="{{ book.url }}">
+                            back to {{ book.data.title }}
+                        </a>
+                    </span>
                     {% endif %}
-                    {% endfor %} -->
+                    {% endfor %}
                 </div>
             </div>
             <div class="fl w-100 w-50-ns">
