attempts to create tags

--- a/_includes/pagelayout.liquid
+++ b/_includes/pagelayout.liquid
@@ -24,6 +24,8 @@ title: page layout
                     </span>
                     {% endif %}
                     {% endfor %}
+                    <p>{{ tags }}</p>
+
                 </div>
             </div>
             <div class="fl w-100 w-50-ns">
@@ -34,3 +36,4 @@ title: page layout
         </div>
     </article>
 </section>
+<!--  -->
